<resources>
    <string name="app_name">Scribe Reader</string>

    <!-- Place holders -->
    <string name="placeholder_text">Place holder</string>
    <string name="placeholder_kanji">青春</string>
    <string name="placeholder_furigana">せいしゅん</string>
    <string name="placeholder_author">ヤマグチノボル</string>
    <string name="placeholder_book_title">青春ブタ野郎はバニーガール先輩の夢を見ない [青春ブタ野郎はバニーガール先輩の夢を見ない] ()</string>

    <!-- Activity Initialization -->
    <string name="initialization_loading_jmdict">Loading JMDict %1$d%%</string>

    <!-- Main Activity -->

    <!-- Menu Navigation -->
    <string name="menu_home">ホーム</string>
    <string name="menu_music">Music</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_flash_cards">勉強</string>
    <string name="menu_library">ライブラリ</string>
    <string name="menu_add">追加</string>

    <!-- Home Tab -->
    <string name="home_read_label">読み続く</string>
    <string name="label_quizzes">クイズ</string>

    <!-- Music -->
    <string name="music_recent_searches_label">Recent Searches</string>

    <!-- Tags -->
    <string name="create_new_tag_label">Create New Tag</string>

    <!-- Dictionary -->
    <string name="dictionary_search_hint">単語を入力して</string>
    <string name="entry_kana_placeholder">むら</string>
    <string name="entry_kanji_placeholder">村</string>
    <string name="entry_pos_placeholder">Noun</string>
    <string name="gloss_place">1. village</string>
    <string name="gloss_text">%1$d. %2$s</string>
    <string name="definitionEntryNotFound">No Entry Found</string>
    <string name="view_example_sentences">例文を見せる</string>
    <string name="expand_button_text">⤢</string>

    <!-- Uploading -->
    <string name="addToLibrary">ライブラリに追加</string>
    <string name="cancel_book">キャンセル</string>
    <string name="uploading_parsing_book">本をパースしている</string>
    <string name="uploading_processing_book">本を解析している %1$d%%</string>

    <string name="author">作家</string>
    <string name="language">言語</string>
    <string name="length">距離</string>
    <string name="chapters">第数</string>
    <string name="published">発行日</string>

    <!-- Reader Activity -->
    <string name="continueButton">➔</string>
    <string name="reader_settings_button_text">⚙</string>
    <string name="reader_continue_button_text">➔</string>
    <string name="EXTRA_BOOK_ID">BOOK_ID</string>

    <!-- Settings -->
    <string name="settings_vertical_text_label">Vertical Text Mode</string>
    <string name="settings_show_learning_label">Show Learning Module</string>
    <string name="settings_play_tts_label">Play TTS Automatically</string>

    <!-- Learning Module -->
    <string name="learning_module_title">知っている言葉をタップして下さい</string>

    <!-- Book Icon Popup -->
    <string name="vertical_text_book_label">Use Vertical Text</string>
    <string name="current_chapter_label">Current Chapter</string>
    <string name="current_section_label">Current Section</string>
    <string name="generate_anki_deck_button_text">Generate Anki Deck</string>
    <string name="read_book_button_text">Read Book</string>

    <!-- Book Details Drop down options -->
    <string-array name="dropdown_options">
        <item>Default</item>
        <item>Vertical</item>
        <item>Horizontal</item>
    </string-array>

    <string name="dropdown_hint">Default</string>
    <!-- Image Descriptions -->
    <string name="description_bookCover">Book Cover Image</string>
    <string name="book_cover_description">Book Cover</string>
    <string name="image_description">Image from the book</string>
    <string name="voice_button_descriptor">Read the Text out loud.</string>
    <string name="editor_activity_label">Editor</string>
    <string name="title_activity_import">ImportActivity</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>