<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_music"
        android:icon="@drawable/music_note_24"
        android:title="@string/menu_music" />
    <item
        android:id="@+id/nav_tags"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_tags" />
    <item
        android:id="@+id/nav_flash_cards"
        android:icon="@drawable/learn"
        android:title="@string/menu_flash_cards" />
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/library"
        android:title="@string/menu_library" />
</menu>
