<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginBottom="0dp"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/reader_vertical_setting_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_vertical_text_label" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/reader_learning_setting_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_show_learning_label" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/reader_tts_setting_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_play_tts_label" />
</LinearLayout>