<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_popup"
    android:backgroundTint="@color/popupBackground"
    android:padding="10dp"
    android:elevation="4dp"
    android:layout_margin="10dp"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_book_title"
        android:textSize="24sp"
        android:id="@+id/book_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/foreground"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_weight="1"
            android:text="@string/vertical_text_book_label" />
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/dropdown_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dropdown_hint"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:dropDownHeight="wrap_content"
            android:dropDownWidth="match_parent"
            android:background="@android:drawable/btn_dropdown"
            android:padding="8dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_weight="1"
            android:text="@string/current_chapter_label" />
        <EditText
            android:id="@+id/current_chapter_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_weight="1"
            android:text="@string/current_section_label" />
        <EditText
            android:id="@+id/current_section_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end" />
    </LinearLayout>

    <Button
        android:id="@+id/generate_anki_deck_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/generate_anki_deck_button_text" />
</LinearLayout>