<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_scrollFlags="scroll">
            <TextView
                android:id="@+id/searchLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dictionary Search"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_scrollFlags="enterAlways">
            <EditText
                android:id="@+id/searchText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/dictionary_search_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reader_settings_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:text="@string/reader_settings_button_text"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/sentenceTokenizationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:alignContent="stretch"
                app:alignItems="stretch"
                app:flexWrap="wrap" />

            <TextView
                android:id="@+id/noEntryFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/definitionEntryNotFound"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/entryContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
